    + [FL] Add armeb to %non_standard_archs as requested by
      Martin Michlmayr. (Closes: #350653)
  * checks/debhelper:
    + [RA] Recognize setting DH_COMPAT with := in addition to = in
      debian/rules.  (Closes: #349272)
  * checks/fields:
    + [RA] Allow a quilt build-dependency for arch-independent packages if
      the quilt makefile rules are included.  (Closes: #349273)
  * checks/manpages:
    + [FL] Ignore more warnings ("cannot adjust line", "can't break
      line") in non-English manpages. (Closes: #349792)
  * checks/menu-format.desc:
    + [RA] Use "menu manual" rather than "menu" for references to more
      clearly distinguish from the Debian Menu Policy.  (Closes: #347510)
  * checks/scripts:
    + [RA] Allow /tmp in variable settings.  It's likely to be a false
      positive.  Reported by Frank Küster.  (Closes: #344998)
    + [RA] Make the syntax checking of shell scripts more robust against
      filenames containing shell metacharacters.  Reported by Michael
      Stilkerich.
  * checks/shared-libs:
    + [JvW] Fix postinst-must-call-ldconfig to also get emitted when there is
      no postinst at all, instead of just one lacking a ldconfig call

  * testset/runtests:
    + [RA] Filter out dpkg-source warnings about unsigned source packages.

 -- Russ Allbery <rra@debian.org>  Thu,  9 Feb 2006 11:27:55 -0800

lintian (1.23.15) unstable; urgency=low
  
  * The "www.no-name-yet.eu" release
  
  * debian/changelog:
    + [FL] Fix wrapping of last changelog entry (Closes: #344899)

  * checks/common_data.pm:
    + [FL] Add xlibs-dev and debmake to %known_obsolete_packages
  * checks/debconf:
    + [CW] Show template name for empty-translated-choices,
      mismatch-translated-choices, and unknown-field-in-templates.
  * checks/debhelper:
    + [FL] Also check for debhelper build-dependency in debhelper-using
      cdbs based packages
    + [FL] Indicate where we found which compat version in