@@ -3,6 +3,7 @@ Section: misc
 Priority: optional
 Maintainer: QA group <packages@qa.debian.org>
 Uploaders: Anyone but Jeroen <jeroen@wolffelaar.nl>
+Build-Depends: debhelper
 Standards-Version: 3.1.1
 
 Package: maintainer-scripts
