@@ -19,6 +19,7 @@ I: maintainer-scripts: possible-non-posix-code-in-maintainer-script postinst:4 '
 I: maintainer-scripts: possible-non-posix-code-in-maintainer-script prerm:25 '   local '
 W: maintainer-scripts source: ancient-standards-version 3.1.1
 W: maintainer-scripts source: changelog-should-mention-qa
+W: maintainer-scripts source: package-uses-deprecated-debhelper-compat-version 1
 W: maintainer-scripts source: qa-upload-has-incorrect-version-number 7-0.1
 W: maintainer-scripts: config-does-not-load-confmodule
 W: maintainer-scripts: deprecated-chown-usage postinst:33 'chown root.root'
